--- a/Kaiserreich Korean Translation/localisation/KR_Persia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Persia_l_english.yml
@@ -1,18 +1,18 @@
 l_english:
 
 ### Parties ###
-PER_totalist_party:0 "HSIi"
-PER_totalist_party_long:0 "Hezb Socialism Irani"
-PER_syndicalist_party:0 "HSI"
-PER_syndicalist_party_long:0 "Hezb Sandicaei Iran"
-PER_radical_socialist_party:0 "HEd"
-PER_radical_socialist_party_long:0 "Hezb Edalat"
-PER_social_democrat_party:0 "HD"
-PER_social_democrat_party_long:0 "Hezb Democrat"
+PER_totalist_party:0 "이란 사회주의당"
+PER_totalist_party_long:0 "이란 사회주의당"
+PER_syndicalist_party:0 "이란 생디칼리스트당"
+PER_syndicalist_party_long:0 "이란 생디칼리스트당"
+PER_radical_socialist_party:0 "에달라트당"
+PER_radical_socialist_party_long:0 "에달라트당"
+PER_social_democrat_party:0 "민주당"
+PER_social_democrat_party_long:0 "민주당"
 PER_social_liberal_party:0 "HEe"
 PER_social_liberal_party_long:0 "Hezab Eetedaliun"
-PER_market_liberal_party:0 "HT"
-PER_market_liberal_party_long:0 "Hezb Tajadod"
+PER_market_liberal_party:0 "타자도드당"
+PER_market_liberal_party_long:0 "타자도드당"
 PER_social_conservative_party:0 "HET"
 PER_social_conservative_party_long:0 "Hezb Eslah Talaban"
 PER_authoritarian_democrat_party:0 "Khandane Qajar"
@@ -371,12 +371,12 @@ pers.20.d:0 "Everyone knew that civil war was a possibility in our disunified na
 pers.20.a:0 "Let the best party win."
 
 pers.21.t:0 "The fight for Isfahan"
-pers.21.d:0 "Isfahan, once the capital of Safavid empire, is considered one of Iran’s most beautiful cities and has many historical sites. It is so popular that some refer to it as “Isfahan, half of the world”. In the past few days since Shah Ahmad Qajar’s death, pro-Hassan Mirza forces have managed to seize important locations around the city, like the Chehel Sotun palace and Naghsh-e Jahan Square, in order to stop any sort of resistance from anti-monarchist groups. Meanwhile, a small group of rebels who were preparing to strike the city have managed to capture the bridges on Zayandeh Rud river and destroyed them, except the famous Safavid bridges of Si o Se Pol and Khaju, effectively cutting the royalists out of the southern part of the city."
-pers.21.a:0 "Loyalist forces must push, even if it’s dangerous."
+pers.21.d:0 "Isfahan, once the capital of Safavid empire, is considered one of Iran's most beautiful cities and has many historical sites. It is so popular that some refer to it as "Isfahan, half of the world". In the past few days since Shah Ahmad Qajar's death, pro-Hassan Mirza forces have managed to seize important locations around the city, like the Chehel Sotun palace and Naghsh-e Jahan Square, in order to stop any sort of resistance from anti-monarchist groups. Meanwhile, a small group of rebels who were preparing to strike the city have managed to capture the bridges on Zayandeh Rud river and destroyed them, except the famous Safavid bridges of Si o Se Pol and Khaju, effectively cutting the royalists out of the southern part of the city."
+pers.21.a:0 "Loyalist forces must push, even if it's dangerous."
 pers.21.b:0 "The loyalists will try to encircle the rebels by rowing to the other side."
 
 pers.22.t:0 "The fight for Tabriz"
-pers.22.d:0 "Tabriz, one of Iran's historical cities, dating back to the Sassanid era and gaining importance as the capital of Iran during the Ilkhanate era and the Safavids at their rise and an important economic center throughout Iran’s history, has been eerily silent for the last couple of days. Just a few days ago with the death of Ahmad Shah Qajar, the revolutionaries present in the city, much like 1908’s constitutional revolution, began to take control of the city. In a fast swoop of the important locations, including Constitution house of Tabriz, Tabriz Grand Bazaar and Kabud mosque, they manage to almost capture the entirety of the city. While those loyal to Hassan Mirza were surprised by the Tabrizi Revolutionaries, they managed to secure the Arg-e Alishah Mausoleum as it proved a good location to holdout against revolutionary forces, as was proven by Russians who took control of Tabriz in 1911."
+pers.22.d:0 "Tabriz, one of Iran's historical cities, dating back to the Sassanid era and gaining importance as the capital of Iran during the Ilkhanate era and the Safavids at their rise and an important economic center throughout Iran's history, has been eerily silent for the last couple of days. Just a few days ago with the death of Ahmad Shah Qajar, the revolutionaries present in the city, much like 1908's constitutional revolution, began to take control of the city. In a fast swoop of the important locations, including Constitution house of Tabriz, Tabriz Grand Bazaar and Kabud mosque, they manage to almost capture the entirety of the city. While those loyal to Hassan Mirza were surprised by the Tabrizi Revolutionaries, they managed to secure the Arg-e Alishah Mausoleum as it proved a good location to holdout against revolutionary forces, as was proven by Russians who took control of Tabriz in 1911."
 pers.22.a:0 "The Revolutionaries storm the Arg-e Alishah in order to defeat the royalists."
 pers.22.b:0 "The rebels delay the attack to negotiate peace terms with their commanding officer."
 
@@ -385,12 +385,12 @@ pers.24.d:0 "The Holiest city for Shias in Iran, the resting place of the Shia 8
 pers.24.a:0 "The rebels are soon rooted out by loyal citizens."
 
 pers.26.t:0 "The fight for Shiraz"
-pers.26.d:0 "Shiraz is probably one of the oldest Iranian cities to exist, dating back to the Achaemenid Empire and its foundation. Being one of Iran’s cultural capitals throughout history, Shiraz has an important role in Iran’s identity and political affairs. In the past couple of days since the death of the Shah, the revolutionary forces have managed to take control of different points around the city with minimum damage to famous historical and cultural sites, such as famous poets Hafez Shirazi and Sa’di’s resting place alongside the Shah Cheragh Mosque, the Quran gate and the famous Zand Dynasty fortress titled Arg of Karim Khan. While the revolutionary forces have managed to take control of most of the city the Qashqai tribesmen, loyal to the Shah, are moving in to capture Shiraz and might bring the city to loyalist control. Unbeknownst to the Qashqai tribe, the Revolutionary Bakhtiari tribe, who have always been in favor of the constitutionalists and participated in the 1907 constitutional revolution dispatched a huge force to help out the revolutionaries. If they get there in time they might just be able to tip the balance in favor of the defending revolutionaries..."
+pers.26.d:0 "Shiraz is probably one of the oldest Iranian cities to exist, dating back to the Achaemenid Empire and its foundation. Being one of Iran's cultural capitals throughout history, Shiraz has an important role in Iran's identity and political affairs. In the past couple of days since the death of the Shah, the revolutionary forces have managed to take control of different points around the city with minimum damage to famous historical and cultural sites, such as famous poets Hafez Shirazi and Sa'di's resting place alongside the Shah Cheragh Mosque, the Quran gate and the famous Zand Dynasty fortress titled Arg of Karim Khan. While the revolutionary forces have managed to take control of most of the city the Qashqai tribesmen, loyal to the Shah, are moving in to capture Shiraz and might bring the city to loyalist control. Unbeknownst to the Qashqai tribe, the Revolutionary Bakhtiari tribe, who have always been in favor of the constitutionalists and participated in the 1907 constitutional revolution dispatched a huge force to help out the revolutionaries. If they get there in time they might just be able to tip the balance in favor of the defending revolutionaries..."
 pers.26.a:0 "The Qashqai tribe hasten their march to Shiraz in order to reinforce the rebels in the city."
 pers.26.b:0 "The Qashqai tribe launch an early offensive that could bring the city to their control."
 
 pers.27.t:0 "The fight for Bandar e'Abbas"
-pers.27.d:0 "Bandar e’Abbas is one the most important trade cities of Iran. Due to its port and key location in the Persian gulf, historically the city has been a centre of trade for foreign merchants and a location where most Iranian exports take place. The port city of Bandar e’Abbas for the past few days has witnessed heavy fighting between the supporters of Hassan Mirza and Revolutionaries. Although the city was initially well guarded by Qajar supporters, due to its importance, Edalat party members had been secretly importing foreign socialists into the city in order to fight the Qajar soldiers when the time was right. As soon as the news of Ahmad Shah’s death spread, Qajar forces began to fortify important parts of the city, especially the port, putting it on lockdown until further notice. Meanwhile, the revolutionaries alongside the foreign fighters began to strike the weaker Qajar positions when they least expected it. In a few hours the smaller Qajar outposts had been wiped out entirely, and when the news reached the Qajar forces it was too late for them do anything, but to fortify the last few major posts they held. Due to infrastructure problems, no reinforcements will get to the city in time."
+pers.27.d:0 "Bandar e'Abbas is one the most important trade cities of Iran. Due to its port and key location in the Persian gulf, historically the city has been a centre of trade for foreign merchants and a location where most Iranian exports take place. The port city of Bandar e'Abbas for the past few days has witnessed heavy fighting between the supporters of Hassan Mirza and Revolutionaries. Although the city was initially well guarded by Qajar supporters, due to its importance, Edalat party members had been secretly importing foreign socialists into the city in order to fight the Qajar soldiers when the time was right. As soon as the news of Ahmad Shah's death spread, Qajar forces began to fortify important parts of the city, especially the port, putting it on lockdown until further notice. Meanwhile, the revolutionaries alongside the foreign fighters began to strike the weaker Qajar positions when they least expected it. In a few hours the smaller Qajar outposts had been wiped out entirely, and when the news reached the Qajar forces it was too late for them do anything, but to fortify the last few major posts they held. Due to infrastructure problems, no reinforcements will get to the city in time."
 pers.27.a:0 "The revolutionaries attack the last fortified outposts and claim the city for themselves."
 
 pers.28.t:0 "End of the fighting"
@@ -734,7 +734,7 @@ pers.100.d:0 "Today, 30th of Azar, the last day of the ninth month of the Irania
 pers.100.a:0 "Happy Yalda Night!"
 
 pers.101.t:0 "Bear found by soldiers"
-pers.101.d:0 "Recently, a bear cub was found by one of our officers in Tehran’s nearby fortifications. While initially we had planned to take away the bear due to military regulations, we have begun to reconsider, as troops stationed in the fort have petitioned for it to stay. We have decided to allow the bear to stay at the fort for the time being to increase moral. The troops have decided to name him Rostam."
+pers.101.d:0 "Recently, a bear cub was found by one of our officers in Tehran's nearby fortifications. While initially we had planned to take away the bear due to military regulations, we have begun to reconsider, as troops stationed in the fort have petitioned for it to stay. We have decided to allow the bear to stay at the fort for the time being to increase moral. The troops have decided to name him Rostam."
 pers.101.a:0 "What a peculiar occurrence."
 
 pers.102.t:0 "Rostam the bear"
@@ -748,12 +748,12 @@ pers.103.b:0 "We must purchase Rostam!"
 
 pers.104.t:0 "Rostam has been sold"
 pers.104.d:0 "Rostam the bear was sold to a Polish merchant passing through Iran. It seems the Polish merchant caravan was deeply amused by the military bear and as soon as they found out he was up for sale they purchased him. They have even began to call him a new name, Wojtek."
-pers.104.a:0 "Alas, Wojtek’s fate shall take him to Poland."
+pers.104.a:0 "Alas, Wojtek's fate shall take him to Poland."
 
 ### Decisions ###
 
-PER_coring_conquered_territory:0 "새 영토 통합"
-PER_core_afghan_land:0 "헤라트 통합"
+PER_coring_conquered_territory:0 "새로운 영토 통합"
+PER_core_afghan_land:0 "헤리트 통합"
 PER_core_afghan_land_desc:0 "Now that we have gained control of our lands in Afghanistan again, we can begin to integrate it into Iran. However, it is going to take decades to fully intergrate the eastern area due to their Hazara ethnic majority. In the west of Afghanistan, the population is majority Pashtun, a group we can more easily integrate into our nation. The Pashtuns most likely will resist our attempts, but eventually they will accept our leadership."
 PER_core_azerbaijani_land:0 "아제르바이잔 통합"
 PER_core_azerbaijani_land_desc:0 "Azerbaijan is now under our direct rule again. After some time, most Azerbaijanis will give up on their dream of their own state, and will accept our leadership. Although there will be some resistance to our rule, we have a very large Azerbaijani minority, and the nation of Azerbaijan only existed for a few decades. Therefore, Azerbaijani resistance will be weak and futile."
