--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -287,15 +287,15 @@ massawa_naval_yard:0 "Massawa Naval Yard"
 
 ### FOP ###
 somisa_FOP:0 "SOMISA"
-universidad_buenos_aires_FOP:0 "Universidad de Buenos Aires"
+universidad_buenos_aires_FOP:0 "부에노스 아이레스 대학교"
 ypf_FOP:0 "YPF"
-fabricaciones_militares_FOP:0 "Fabricaciones Militares"
-hispano_argentina_FOP:0 "Hispano-Argentina"
-seccion_industrial_amasadoras_mecanicas_FOP:0 "Sección Industrial Amasadoras Mecánicas"
-fabrica_militar_aviones_FOP:0 "Fábrica Militar de Aviones"
+fabricaciones_militares_FOP:0 "군수 제조사"
+hispano_argentina_FOP:0 "히스파노-아르헨티나"
+seccion_industrial_amasadoras_mecanicas_FOP:0 "산업용 부품 기계 혼합사"
+fabrica_militar_aviones_FOP:0 "군용 항공기 공장"
 afne_FOP:0 "AFNE"
 astarsa_FOP:0 "ASTARSA"
-astilleros_alianza_FOP:0 "Astilleros Alianza"
+astilleros_alianza_FOP:0 "조선소 연합"
 
 ### Fengtian ###
 mantetsu_industrial_subsiduaries:0 "만철 산업 회사"
@@ -409,15 +409,15 @@ maizuru_naval_arsenal:0 "마이즈루 해군 공창"
 
 ### La Plata ###
 somisa:0 "SOMISA"
-universidad_buenos_aires:0 "Universidad de Buenos Aires"
+universidad_buenos_aires:0 "부에노스 아이레스 대학교"
 ypf:0 "YPF"
-fabricaciones_militares:0 "Fabricaciones Militares"
-hispano_argentina:0 "Hispano-Argentina"
-seccion_industrial_amasadoras_mecanicas:0 "Sección Industrial Amasadoras Mecánicas"
-fabrica_militar_aviones:0 "Fábrica Militar de Aviones"
+fabricaciones_militares:0 "군수 제조사"
+hispano_argentina:0 "히스파노-아르헨티나"
+seccion_industrial_amasadoras_mecanicas:0 "산업용 부품 기계 혼합사"
+fabrica_militar_aviones:0 "군용 항공기 공장"
 afne:0 "AFNE"
 astarsa:0 "ASTARSA"
-astilleros_alianza:0 "Astilleros Alianza"
+astilleros_alianza:0 "조선소 연합"
 argentina_bmw:0 "BMW 아르헨티나"
 argentina_mauser:0 "마우저 아르헨티나"
 argentina_fokker:0 "포커 아르헨티나"
@@ -500,12 +500,12 @@ rotterdamsche_maatschappij:0 "Rotterdamsche Droogdok Maatschappij"
 rotterdamsche_maatschappij_desc:0 "The largest shipbuilding and repair company of Rotterdam, the Rotterdamsche Droogdok Maatschappij constructed a variety of civilian and military vessels, including the majority of the Dutch submarine fleet built in the specifically designed "Onderzeebootloods" (Submarine Hall)."
 
 ### New_England ###
-kr_raytheon:0 "Raytheon"
+kr_raytheon:0 "레이시언"
 kr_dupont:0 "듀폰트"
 smith_wesson:0 "스미스 & 웨슨"
-american_locomotive_company:0 "American Locomotive Company"
-chance_vought:0 "Chance Vought"
-nee_electric_boat:0 "Electric Boat"
+american_locomotive_company:0 "아메리카 기관차 회사"
+chance_vought:0 "찬스 보우트"
+nee_electric_boat:0 "일렉트릭 보트"
 
 ### Norway ###
 norsk_hydro:0 "Norsk Hydro"
@@ -528,22 +528,22 @@ marinens_hovedverft:0 "Marinens Hovedverft"
 nylands_verksted:0 "Nylands Verksted"
 
 ### Ottomans ###
-karabuk_demir:0 "Karabük Demir Çelik Fabrikaları"
-koc_elektrik:0 "Koçzade Elektrik"
-deutsch_osmanisches:0 "Deutsch-Osmanisches Mineralölunternehmen"
+karabuk_demir:0 "카라뷔크 철강"
+koc_elektrik:0 "코자드 전기"
+deutsch_osmanisches:0 "독일-오스만 기름 회사"
 mauser_osmanen:0 "마우저 오스만 제국"
-ankara_tufek:0 "Ankara Tüfek Fabrikası"
-sarsilmaz:0 "Sarsılmaz"
-zeytinburnu_fabrika:0 "Zeytinburnu Fabrika-i Hümayunu"
-mke_ottoman:0 "MKE Top Fabrikası"
+ankara_tufek:0 "앙카라 라이플 공장"
+sarsilmaz:0 "살실마즈"
+zeytinburnu_fabrika:0 "제이틴부르누 후마윤 공장"
+mke_ottoman:0 "MKE 탑 팩토리"
 opel_osmanen:0 "오펠 톱하네"
-uzel_traktor:0 "Uzel Traktör Fabrikası"
-eskisehir_lokomotif:0 "Eskişehir Lokomotif Fabrikası"
-hurkus:0 "Hürkuş"
+uzel_traktor:0 "우젤 트랙터 공장"
+eskisehir_lokomotif:0 "에스키셰히르 기관차 공장"
+hurkus:0 "휴르쿠스"
 tomtas:0 "TOMTAŞ"
-germaniawerft_osmanen:0 "Germaniawerft"
-golcuk_tersanesi:0 "Gölcük Tersanesi"
-taskizak_tersanesi:0 "Taşkızak Tersanesi"
+germaniawerft_osmanen:0 "게르마니아워프트"
+golcuk_tersanesi:0 "괼쥑 조선소"
+taskizak_tersanesi:0 "타시크자크 조선소"
 
 ### Pacific States of America ###
 southern_pacific_railroad:0 "남태평양 철도"
