--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -69,11 +69,11 @@ ott_new_reformers:0 " 새로운 개혁자\n"
 ott_investigation:0 " 수사"
 ott_arbitrary_rulings:0 " 임의의 판결\n"
 OTT_theorists_unlocked_tt:0 "\n§G이론가들 열림§!\n"
-OTT_uzel_unlocked_tt:0 "§GUzel 열림§!\n"
-OTT_sarsilmaz_unlocked_tt:0 "§GSarsılmaz 열림§!\n"
-OTT_kardemir_unlocked_tt:0 "§GKarabük Demir Çelik 열림§!\n"
+OTT_uzel_unlocked_tt:0 "§G우젤 열림§!\n"
+OTT_sarsilmaz_unlocked_tt:0 "§G살실마즈 열림§!\n"
+OTT_kardemir_unlocked_tt:0 "§G카라뷔크 철강 열림§!\n"
 OTT_mke_unlocked_tt:0 "§GMKE 열림§!\n"
-OTT_hurkus_unlocked_tt:0 "§GHürkuş 열림§!\n"
+OTT_hurkus_unlocked_tt:0 "§G휴르쿠스 열림§!\n"
 axis_defeated:0 "카이로 조약 패배"
 ott_german_embargo:0 "독일의 금수조치"
 ott_civil_war_tt:0 "§R반군과 오스만 푸아드간의 내전이 발발했다.§!"
@@ -359,7 +359,7 @@ ott.8.d:0 "[GetYear]년 중반에 터키의 주인들로부터 억압을 받자,
 ott.8.a:0 "우리는 그것들을 부숴 버릴 거야!"
 
 ott.9.t:0 "2차 아라비아 반란!"
-ott.9.d:0 "[GetYear]년에 몇몇 아라비아 부족들은 오스만 제국을 다시 파괴하기 위해 그들의 노력을 통합했습니다. 이번에는 성공할까?"
+ott.9.d:0 "[GetYear]년에 몇몇 아라비아 부족들은 오스만 제국을 다시 파괴하기 위해 그들의 노력을 통합했습니다. 이번에는 성공할까요?"
 ott.9.a:0 "우리는 그것들을 다시 부숴 버릴 거야!"
 ott.9.b:0 "그들에게 우리가 전폭적인 지원을 제공하자"
 ott.9.c:0 "우리는 우리가 남겨둘 수 있는것을 그들에게 보낼것이다"
@@ -1291,13 +1291,13 @@ ottaxis.102.b:0 "우리는 우리의 몫에 만족한다"
 
 ottaxis.103.t:0 "[From.GetNameDefCap]이(가) 이라크를 요구하다"
 ottaxis.103.nohejazhasegypt:0 "우리가 바그다드와 바스라를 합병한 것에 격분하여, [From.GetNameDefCap]은 자신들에게 즉시 이 영토들을 양도할것을 요구했습니다. 이 상황에서 우리가 스스로를 방어할 수 있는 유일한 방법은 이집트의 도움을 요청하는 것입니다."
-ottaxis.103.d.hashejazhasegypt:0 "Outraged by our annexation of Baghdad and Basra, [From.GetNameDef] has demanded we transfer these territories at once or face the consequences. The only way we can defend ourselves in this situation is by asking our Egyptian allies for their support."
+ottaxis.103.d.hashejazhasegypt:0 "우리가 바그다드와 바스라를 합병한 것에 격분하여, [From.GetNameDef]은 자신들에게 즉시 이 영토들을 양도하거나 결과를 직면해야 한다고 요구했습니다. 이 상황에서 우리가 스스로를 방어할 수 있는 유일한 방법은 이집트와 그 동맹국에 도움을 요청하는 것입니다."
 ottaxis.103.a:0 "이집트의 지원을 요청하자"
 ottaxis.103.b:0 "우리는 이란을 화나게 해선 안된다"
 
 ottaxis.104.t:0 "바그다드 문제"
 ottaxis.104.d.haskurd:0 "이라크의 땅들은 항상 중동에서 뜨거운 논쟁이 되어왔고 이란과 아라비아 동맹국들 간의 적대감이 바그다드시에서 고조되고 있다는 사실이 이제 다시 한번 분명해 졌습니다. 양국은 그 지역에 대한 그들의 주장을 표명해왔고 물러서지 않을 것입니다. 위기를 해결하고 단계적 확대를 막기 위해, 아라비아는 이란이 후퇴하도록 강요하기 위해 우리를 중재자로 불렀습니다. 그러나 우리 국민들은 다시 전쟁에 나서는데 관심이 없기 때문에 정부는 가능한 해결책을 내놓았습니다. 이란이 이라크에 대한 그들의 주장을 철회하는 대가로, 그들은 중립 쿠르드 완충 지대에 대한 완전한 통제권을 부여 받을 것입니다. 그러나 다른 사람들은 이란에게 더 많은 땅을 수여하는것이 수년 내에 더 많은 문제를 야기 할뿐 아니라 이란이 팽창주의에 접근하게 될 것을 두려워 하고 있습니다."
-ottaxis.104.d.nokurd:0 "The Iraqi lands have always been a hotly-contested region of the Middle East, and this is once again apparent now that hostilities between [PER.GetNameDef] and our Arabian allies are rising over the city of Baghdad. Both nations have expressed their claims on the region and are unwilling to back down. To resolve the crisis and prevent escalation, Arabia has called on us as a mediator. Our people have no interest in going to war again so soon, but many fear that granting [PER.GetNameDef] more land will only lead to further trouble in the years to come."
+ottaxis.104.d.nokurd:0 "이라크의 땅들은 항상 중동에서 뜨거운 논쟁이 되어왔고, 이것은 [PER.GetNameDef]와 아라비아 동맹국들 간의 적대감이 바그다드시에서 고조되고 있다는 사실이 이제 다시 한번 분명해 졌습니다. 양국은 그 지역에 대한 그들의 주장을 표명해왔고 물러서지 않을 것입니다. 위기를 해결하고 단계적 확대를 막기 위해, 아라비아는 우리를 중재자로 불렀습니다. 우리 국민들은 다시 전쟁에 나서는데 관심이 없지만 [PER.GetNameDef]에 더 많은 토지를 양도하면 앞으로 수년 내에 더 많은 문제가 발생할 것이라는 두려움이 있습니다."
 ottaxis.104.a:0 "[PER.GetNameDef]에게 물러나던가 말라던가 해라"
 ottaxis.104.b:0 "쿠르드 해결책 제안"
 ottaxis.104.c:0 "아라비아는 독자적으로 해결해야한다"
@@ -1321,83 +1321,83 @@ ottaxis.108.t:0 "아라비아는 혼자 서있다"
 ottaxis.108.d:0 "더 이상의 지치는 갈등과 더불어 쓸모없는 아라비아 동맹국들에게 버림받은 이집트는 그들을 외면하고 우리에게 이라크를 침공하고 그들의 부유한 땅을 점령할 자유를 주었습니다."
 ottaxis.108.a:0 "즉시 공격하자"
 
-ottaxis.109.t:0 "We Are On Our Own"
-ottaxis.109.d:0 "After several rounds of negotiations, the Egyptians have abandoned us to our own devices. We can no longer consider them an ally, and thus we are once again at the mercy of the [PER.GetAdjective] government which has repeated its demands for Iraq."                                                                         
-ottaxis.109.a:0 "They will have to fight for it"
-ottaxis.109.b:0 "Let them have it, then!"
+ottaxis.109.t:0 "우리는 스스로 해야 한다"
+ottaxis.109.d:0 "여러 차례의 협상 끝에, 이집트인들은 우리를 버렸습니다. 우리는 더 이상 그들을 동맹국으로 생각할 수 없으며, 우리는 다시 이라크에 대한 요구를 되풀이 한 [PER.GetAdjective] 정부의 자비하에 있습니다."                                                                         
+ottaxis.109.a:0 "그들은 그것을 위해 싸워야 할 것이다"
+ottaxis.109.b:0 "그럼 그들에게 맡겨라!"
 
-ottaxis.110.t:0 "The Treaty of Cairo"
-ottaxis.110.d:0 "[From.GetNameDefCap] has taken the lead in the peace negotiations with the surrendering Ottomans, and thus we are left with whatever territorial gains we can wrest from them. It is, perhaps, the best we can hope for."
-ottaxis.110.a:0 "So be it"
+ottaxis.110.t:0 "카이로 조약"
+ottaxis.110.d:0 "[From.GetNameDefCap]은 항복하는 오스만과의 평화 협상에서 주도권을 차지했고, 따라서 우리는 그들에게서 어떤 영토적 이득이라도 얻을 수 있습니다. 그것은 아마도 우리가 바랄 수 있는 최고의 것입니다."
+ottaxis.110.a:0 "알겠다"
 
-ottaxis.111.t:0 "[From.GetNameDefCap] Backs Down"
-ottaxis.111.d:0 "The Arabians clearly fear our might, as they have stood down and surrendered Iraq without the necessity of war."
-ottaxis.111.a:0 "Excellent"
+ottaxis.111.t:0 "[From.GetNameDefCap]가 물러나다"
+ottaxis.111.d:0 "아랍인들은 명백히 우리의 힘을 두려워합니다. 왜냐하면 그들은 전쟁의 필요성 없이 이라크에서 물러났기 때문입니다."
+ottaxis.111.a:0 "훌륭해"
 
-ottaxis.112.t:0 "[From.GetNameDefCap] Backs Down"
-ottaxis.112.d:0 "The Egyptians have stood by us, cowing the [PER.GetAdjective] with threats of war. The Iraqi territories are now ours, without further fuss."
-ottaxis.112.a:0 "Excellent"
+ottaxis.112.t:0 "[From.GetNameDefCap]가 물러나다"
+ottaxis.112.d:0 "이집트인들은 우리를 지지하며, [PER.GetAdjective]를 전쟁의 위협으로 몰아 넣었습니다. 이라크 영토는 이제 더 이상의 소요 없이 우리의 영토입니다."
+ottaxis.112.a:0 "훌륭해"
 
-ottaxis.115.t:0 "Treaty of Cairo : Egypt Takes Hejaz"
-ottaxis.115.d:0 "Egypt, a nation we are allies with, has taken the lead in peace negotiations with the Ottomans and has announced its assumption of control over the lands in Hejaz. This is rightful Arab land that the Egyptians promised us. Egypt evidently neither respects us nor its own word."
-ottaxis.115.a:0 "We need this alliance - but at least we can have Iraq"
-ottaxis.115.b:0 "We can't stand for this insolence - take Iraq and leave the Pact"
-ottaxis.115.a.PER:0 "We cannot survive alone however great this insult may be"
-ottaxis.115.b.PER:0 "We can't stand for this insolence - leave the Pact immediately!"
+ottaxis.115.t:0 "카이로 조약 : 이집트가 헤자즈를 점령하다"
+ottaxis.115.d:0 "우리의 동맹국인 이집트는 오스만과의 평화 협상에서 주도권을 잡았으며 헤자즈의 땅에 대한 통제권을 주장했습니다. 이것은 이집트인들이 우리에게 약속한 정당한 아랍의 땅입니다. 이집트는 분명히 우리와 그 자신의 말을 존중하지 않습니다."
+ottaxis.115.a:0 "우리는 이 동맹이 필요하다 - 적어도 이라크는 가질수 있다"
+ottaxis.115.b:0 "우리는 이 오만함을 참을 수 없다 - 이라크를 가진 뒤 조약에서 떠난다"
+ottaxis.115.a.PER:0 "이 모욕이 아무리 클지라도 우리는 홀로 살아남을 수 없다"
+ottaxis.115.b.PER:0 "우리는 이 오만함을 참을 수 없다 - 즉시 조약에서 떠난다!"
 
-ottaxis.116.t:0 "[From.GetNameDefCap] is Enraged"
-ottaxis.116.d:0 "The Arabians are enraged by the results of the peace treaty, calling our occupation of the Hejaz a betrayal. They have left our alliance, clearly never intending to return."
-ottaxis.116.a:0 "Aww, don't be that way"
+ottaxis.116.t:0 "[From.GetNameDefCap]가 격분하다"
+ottaxis.116.d:0 "아랍인들은 우리의 헤자즈 점령을 배신이라고 부르며 평화 조약의 결과에 격분하고 있습니다. 그들은 우리의 동맹을 떠났고, 결코 돌아올 의도가 없습니다."
+ottaxis.116.a:0 "아, 그러지 마"
 
-ottaxis.120.t:0 "Egypt Proposes an Anti-Arabian Pact"
-ottaxis.120.d:0 "Egypt has taken the lead in the peace negotiations with the Ottomans, and at the negotiating table they informed us that they no longer had any intentions of continuing their alliance with the Arabians. Indeed, they consider the Arabians untrustworthy, and would much rather ally with us against them. They have said they will let us have our claims on Iraq and Bahrain if we join them."
-ottaxis.120.a:0 "Join their Pact"
-ottaxis.120.b:0 "We cannot trust someone who abandons their allies so easily"
+ottaxis.120.t:0 "이집트의 반 아라비아 조약"
+ottaxis.120.d:0 "이집트는 오스만과의 평화 협상을 주도해 왔고, 협상 테이블에서 그들은 더 이상 아랍인과의 동맹을 지속할 의도가 없다고 우리에게 알렸습니다. 사실, 그들은 아랍인들을 신뢰할 수 없다고 생각하며 오히려 그들과 대립하려 합니다. 그들은 우리가 그들과 합류한다면 이라크와 바레인에 대한 우리의 주장을 허락할 것이라고 말했습니다."
+ottaxis.120.a:0 "조약에 참여한다"
+ottaxis.120.b:0 "동맹을 그렇게 쉽게 버리는 사람을 믿을 수 없다"
 
-ottaxis.121.t:0 "Iran Refuses"
-ottaxis.121.d:0 "Iran has responded to our offer, and have refused to join our Anti-Arabian alliance, claiming that we would be an untrustworthy ally."
-ottaxis.121.a:0 "Egypt stands alone"
+ottaxis.121.t:0 "이란이 거부하다"
+ottaxis.121.d:0 "이란은 우리의 제안에 대해 답했으며, 우리는 신뢰할 수 없는 동맹국이 될 것이라고 주장하면서 우리의 반 아랍 동맹에 가입하기를 거부했습니다."
+ottaxis.121.a:0 "이집트는 혼자다"
 
-ottaxis.122.t:0 "The Egyptian Betrayal"
-ottaxis.122.d:0 "Egypt has taken the lead in the peace negotiations, and it has quickly become apparent that they intend to betray us. Not only have they taken the Hejaz for their own, they have made overtures to [PER.GetNameDef] to form an alliance against us. Our alliance is, it seems, quite over."
-ottaxis.122.a:0 "This insult is unheard of!"
+ottaxis.122.t:0 "이집트의 배신"
+ottaxis.122.d:0 "이집트는 평화 협상에서 주도권을 잡았고, 그들이 우리를 배신하려는 의도가 금방 분명해졌습니다. 그들은 자신을 위해 헤자즈를 가져갔을 뿐만 아니라, [PER.GetNameDef]에 대한 연합을 형성했습니다. 우리의 동맹은 이미 끝난 것 같습니다."
+ottaxis.122.a:0 "이런 모욕은 전례가 없다!"
 
-ottaxis.131.t:0 "Freed from Ottoman Domination"
-ottaxis.131.d:0 "As part of the peace treaty between the Ottomans and their enemies, [Root.GetNameDef] has had all its ties to the Ottoman government severed. We are now considered free to act as we wish, as a free and independent nation."
-ottaxis.131.a:0 "Lovely"
+ottaxis.131.t:0 "오스만의 지배로부터 해방되다"
+ottaxis.131.d:0 "오스만과 그들의 적들 간의 평화 조약의 일부로, [Root.GetNameDef]는 오스만 정부와 모든 관계를 단절했습니다. 우리는 이제 자유롭고 독립적인 국가로서 우리가 원하는 대로 행동할수 있습니다."
+ottaxis.131.a:0 "사랑스럽군"
 
-ottaxis.200.t:0 "The Treaty of Tehran"
-ottaxis.200.d.egypt:0 "After much fighting, the Ottoman Empire has been defeated. We have captured many of their cities and liberated thousands from the iron fist of Ottoman rule. Now that we, along with the Cairo Pact, have conquered the sick man, we have a choice of what to do with the spoils. We could take what we claimed and leave the rest for the Cairo Pact to divide amongst themselves. However, we are not allies with Egypt. We have the opportunity to establish a puppet regime in Syria, as a buffer state between us and the Egyptians should they ever go to war with us, though they might not appreciate such a move..."
-ottaxis.200.d.noegypt:0 "After much fighting, the Ottoman Empire has been defeated. We have captured many of their cities and liberated thousands from the iron fist of Ottoman rule. Now that we have conquered the sick man, we have a choice of what to do with the spoils. Do we set up a puppet regime in Syria, or simply take all the Ottoman lands in the Middle East and decide what to do with them later?"
-ottaxis.200.a:0 "Take our claims and leave the rest to the Cairo Pact"
-ottaxis.200.b:0 "Establish a puppet regime in Syria to cut off Egypt"
-ottaxis.200.c:0 "Take the territory - we will decide what to do with it later"
+ottaxis.200.t:0 "테헤란 조약"
+ottaxis.200.d.egypt:0 "많은 싸움 끝에 오스만 제국은 패했습니다. 우리는 그들의 많은 도시들을 점령했고 오스만 통치의 철권통치로부터 수천 명을 해방시켰습니다. 이제 우리는, 카이로 조약과 함께 환자를 정복하였고, 우리는 전리품으로 무엇을 할 것인지 선택할 수 있습니다. 우리는 우리가 주장한 것을 가지고 나머지는 카이로 조약에 맡길 수 있습니다. 그러나 우리는 이집트와 동맹이 아닙니다. 우리는 우리와 이집트인 사이의 완충국으로서 시리아에 괴뢰 정권을 수립할 기회가 있으며, 그들이 그러한 움직임을 인정하지 않는다면, 그들은 우리와 전쟁을 해야 합니다..."
+ottaxis.200.d.noegypt:0 "많은 싸움 끝에 오스만 제국은 패했습니다. 우리는 그들의 많은 도시들을 점령했고 오스만 통치의 철권통치로부터 수천 명을 해방시켰습니다. 이제 우리는 환자를 정복하였고, 우리는 전리품으로 무엇을 할 것인지 선택할 수 있습니다. 우리는 시리아에 괴뢰 정권을 만들지, 아니면 단순히 중동 지역에 있는 모든 오스만 땅을 가져가고 나중에 무엇을 할지 결정할 수 있습니다"
+ottaxis.200.a:0 "우리의 주장만 받아들이고 나머지는 카이로 조약에 맡긴다"
+ottaxis.200.b:0 "이집트를 차단하기 위해 시리아에 괴뢰국 체제를 구축한다"
+ottaxis.200.c:0 "영토를 장악한다 - 우리는 나중에 그것을 어떻게 할지 결정할 것이다"
 
-ottaxis.201.t:0 "The Treaty of Tehran"
-ottaxis.201.d:0 "Now that the Ottoman Empire has been defeated, thanks to a united effort from our allies in the Cairo Pact and with great help from [PER.GetNameDef], we must now split the spoils between us. Iran, having done a great deal against the Ottomans, took their claims first and restricted their gains solely to what they promised they would occupy. Now we must decide what to do with our own gains."
-ottaxis.201.a:0 "Take the Levant and leave the rest to our allies"
-ottaxis.201.b:0 "We will keep everything, no matter what the Arabians think"
-ottaxis.201.c:0 "We will decide what to do with it all later"
+ottaxis.201.t:0 "테헤란 조약"
+ottaxis.201.d:0 "이제 오스만 제국은 카이로 조약에 있는 동맹국들의 연합된 노력과 [PER.GetNameDef]의 큰 도움 덕분에 패배하였고, 이제 우리는 그 전리품을 우리끼리 나누어야 합니다. 이란은 오스만을 상대로 많은 일을 한 끝에 자신들의 주장을 먼저 취했고, 그들이 점령하기로 약속한 것에 대해서만 이득을 제한했습니다. 이제 우리는 우리 자신의 이익을 가지고 무엇을 해야 할지 결정해야 합니다."
+ottaxis.201.a:0 "레반트를 받고 나머지는 모두 우리의 동맹국에게 나눠주어라"
+ottaxis.201.b:0 "우리는 아랍인들이 어떻게 생각하든지 간에 우리가 얻은 것을 유지할 것이다"
+ottaxis.201.c:0 "우리는 나중에 그것을 어떻게 할지 결정할 것이다"
 
 ottaxis.202.t:0 "테헤란 조약 : 아라비아의 요구"
 ottaxis.202.d:0 "이제, 오스만 제국의 패배와 함께, 우리는 우리의 요구사항을 만들 수 있습니다. 비록 우리가 하나의 깃발 아래 아랍 민족들을 통합시킬 수는 없지만, 이집트는 우리에게 헤자즈 땅을 남겼고, 아무것도 없는것보다는 낫습니다."
 ottaxis.202.a:0 "우리가 일어서며 오스만 제국이 쓰러졌다"
 
-ottaxis.203.t:0 "The Treaty of Tehran"
-ottaxis.203.d:0 "Betrayal! With [PER.GetNameDef] heading the peace negotiations with the Ottomans, it has handed the Hejaz over to the control of the Egyptians...and they have decided to keep it! There is nothing left for us to take. Thousands of Arab soldiers died fighting for a united Arabia, and yet we get nothing from it. The Cairo Pact alliance evidently meant nothing to the Egyptians, and Iran is filling the void the Ottomans left."
-ottaxis.203.a:0 "Clearly there is no point to the Pact"
+ottaxis.203.t:0 "테헤란 조약"
+ottaxis.203.d:0 "배신입니다! [PER.GetNameDef]는 오스만과 평화 협상을 이끌었으며, 헤자즈를 이집트인들의 통제하에 넘겨주었고 그들은 그것을 가지기로 결정했습니다! 우리가 가져갈 것은 아무것도 없습니다. 수천 명의 아랍 병사들이 연합을 위해 목숨을 바쳤지만 우리는 그것으로부터 아무것도 얻지 못했습니다. 카이로 조약 동맹은 이집트인들에게 아무런 의미가 없는 것이 분명합니다. 그리고 이란은 오스만의 공백을 메우고 있습니다."
+ottaxis.203.a:0 "명백히 그 조약은 의미가 없다"
 
 ottaxis.204.t:0 "테헤란 조약"
-ottaxis.204.d:0 "The Ottomans have been defeated, but with [PER.GetNameDef] taking the lead in the peace negotiations we have discovered they are claiming far more land in the Levant than they promised. This leaves us with very little, and our allies with almost nothing."
-ottaxis.204.a:0 "Take the Levant and leave the rest to our allies"
-ottaxis.204.b:0 "We will keep what we did get, no matter what the Arabians think"
-ottaxis.204.c:0 "This will have to suffice"
+ottaxis.204.d:0 "오스만은 패배했지만, [PER.GetNameDef]는 평화 협상을 주도하여 그들이 약속한 것보다 훨씬 더 많은 레반트의 땅을 주장하고 있다는 것을 발견했습니다. 이것은 우리에게 매우 적은 것을 남겨주었고, 우리의 동맹국들에게는 거의 아무것도 남겨주지 않았습니다."
+ottaxis.204.a:0 "레반트를 받고 나머지는 모두 우리의 동맹국에게 나눠주어라"
+ottaxis.204.b:0 "우리는 아랍인들이 어떻게 생각하든지 간에 우리가 얻은 것을 유지할 것이다"
+ottaxis.204.c:0 "이것으로 충분하다"
 
-ottaxis.205.t:0 "The Treaty of Tehran"
-ottaxis.205.d:0 "The [PER.GetAdjective] government has taken the lead in peace negotiations with the Ottomans, but somehow after all is said and done it is we who end up with nothing to show for our efforts. The Egyptians say that they cannot give us a Hejaz the Ottomans do not own, and perhaps that is true... but why then did all our soldiers perish on the battlefield?"
-ottaxis.205.a:0 "We need our alliance, even if this is a disappointment"
-ottaxis.205.b:0 "We have no further need of the Pact, then"
+ottaxis.205.t:0 "테헤란 조약"
+ottaxis.205.d:0 "[PER.GetAdjective] 정부는 오스만과의 평화 협상에서 주도권을 잡았지만 어찌되었든 결국 우리의 노력에 대해 보여줄 것이 아무것도 없다는 말이 나오고 있습니다. 이집트인들은 오스만이 소유하고 있지 않은 헤자즈를 우리에게 줄 수 없다고 말하는데, 아마도 그것은 사실일 것입니다... 그렇다면 왜 우리 군인들은 모두 전장에서 죽었을까요?"
+ottaxis.205.a:0 "실망스럽더라도 우리는 동맹이 필요하다"
+ottaxis.205.b:0 "우리는 조약을 더 이상 필요로 하지 않는다"
 
-ottaxis.206.t:0 "[From.GetNameDefCap] has Left the Pact"
-ottaxis.206.d:0 "Disappointed by the results of the war with the Ottomans, the [From.GetAdjective] government has decided there is no further purpose to it remaining in an alliance with us."
-ottaxis.206.a:0 "So be it"
+ottaxis.206.t:0 "[From.GetNameDefCap]이 조약을 탈퇴하다"
+ottaxis.206.d:0 "오스만과의 전쟁 결과에 실망을 금할 수 없으며, [From.GetAdjective] 정부는 우리와 동맹을 유지할 더 이상의 목적이 없다고 결정했습니다."
+ottaxis.206.a:0 "알겠다"
