--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -12,7 +12,7 @@ custom_diff_strong_rus:0 "러시아 강화"
 custom_diff_strong_sov:0 "소비에트 강화"
 custom_diff_strong_aus:0 "오스트리아 강화"
 custom_diff_strong_usa:0 "미국 강화"
-custom_diff_strong_nfa:0 "국가주의 프랑스 강화"
+custom_diff_strong_nfa:0 "국민 프랑스 강화"
 custom_diff_strong_ita:0 "이탈리아 강화"
 custom_diff_strong_jap:0 "일본 강화"
 custom_diff_strong_qie:0 "청나라 강화"
