--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -414,20 +414,20 @@ japdom.11.d:0 "상상할 수도 없는 일이 또 일어났습니다! 스즈키 
 japdom.11.a:0 "Gomeifuku wo inorimasu."
 
 japdom.12.t:0 "비난 받는 정부"
-japdom.12.d:0 "Unsurprisingly, the failure to pass the National Security Act has created a backlash against the Prime Minister. The conservatives and bureaucrats who had backed the bill feel betrayed by Suzuki's back-down. The House of Peers and the Privy Council, disappointed by the Government's incapability to produce any measures against syndicalism, have lost all their patience with the cabinet."
-japdom.12.a:0 "Suzuki's days are numbered..."
+japdom.12.d:0 "놀랄 것도 없이, 국가보안법 통과의 실패는 수상에 대한 반발을 불러일으켰습니다. 이 법안을 지지했던 보수주의자들과 관료들은 스즈키의 패배에 배신감을 느꼈습니다. 정부가 생디칼리즘에 대한 어떤 조치도 취하지 못한 데 실망한 귀족원과 추밀원은 내각에 대한 인내심을 모두 잃었습니다."
+japdom.12.a:0 "스즈키의 날이 얼마 남지 않았다..."
 
 japdom.13.t:0 "스즈키 기사부로의 사임"
-japdom.13.d:0 "Abandoned by everyone, the humiliated Prime Minister resigned when the Peers passed a censure motion denouncing the cabinet, and with lukewarm support former Home Minister Mizuno Rentaro was appointed in his place. Ominously, the Privy Council and its ultraconservative chairman Baron Hiranuma released a statement declaring that the 'parliamentary impotency' needs to be replaced by a more stable system."
-japdom.13.a:0 "Call emergency convention!"
+japdom.13.d:0 "모든 사람들에게 버림받고 굴욕받은 수상은 귀족원이 내각을 비난하는 불신임안을 통과시키면서 사임했으며, 미적지근한 지지와 함께 미즈노 렌타로 전 내무장관이 그의 자리를 대신하게 되었습니다. 유감스럽게도, 추밀원과 추밀원의 초보수적인 의장 히라누마 남작은 '의회적 무능'을 더 안정적인 시스템으로 대체할 필요가 있다고 선언하는 성명을 발표했습니다."
+japdom.13.a:0 "긴급 회의를 소집하라!"
 
 japdom.14.t:0 "미즈노 렌타로의 선거"
 japdom.14.d:0 "The downfall of Suzuki stunned the Rikken Seiyukai, and an emergency convention was called. The bureaucratic Tokonami faction (named after Tokonami Takejiro (1867-1935), chairman of the pro-Tanaka Seiyu Honto during the Tanaka dictatorship and its aftermath) has been crippled by the loss of their leader, leaving the reactionary Nakajima faction to take control of the party. From his new post as Director of General Affairs, Nakajima enjoys decision-making power over the entire party, but has stopped short of crowning himself chairman and instead elected current Prime Minister and Tokonami-aligned Mizuno Rentaro instead."
-japdom.14.a:0 "Finally, some stability in politics."
+japdom.14.a:0 "마침내 정치가 어느정도 안정해졌구나."
 
 japdom.15.t:0 "일본의 가장 긴 겨울"
 japdom.15.d:0 "The Japanese government has found itself effectively paralysed. The downfall of two successive Seiyukai Prime Ministers has severely weakened the power of the new Prime Minister, and Hiranuma's open scheme to destroy the parliamentary system has only worsened the political turmoil. Extremist groups are growing by the day, and the military is getting more and more frustrated. Several high-ranking officers within the Army have hatched a plot to overthrow the civilian administration and 'rescue' the Empire. The plotters have approached Army Minister Hayashi Senjuro for his support..."
-japdom.15.a:0 "The future of Japan lies in his choice."
+japdom.15.a:0 "일본의 미래가 그의 선택에 달렸다."
 
 japdom.16.t:0 "일본의 가장 긴 날"
 japdom.16.d:0 "After ten years of political disgrace, the army has taken power again, this time by a coup d'état. Ultraconservative politician Baron Hiranuma Kiichiro is now Prime Minister, and a state of martial law has been enacted across all of the Greater Japanese Empire."
