--- a/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
@@ -146,11 +146,11 @@ INC_paternal_autocrat_party:0 "왕당파"
 INC_paternal_autocrat_party_long:0 "왕당파(Dang Bao Hoang)"
 INC_national_populist_party:0 "까오 다이"
 INC_national_populist_party_long:0 "계시와 구원의 제3시대의 위대한 종교(Dai Dao Tam Ky Pho Do)"
-INC_Bolshie:0 "IBP"
+INC_Bolshie:0 "인도차이나 볼셰비키당"
 INC_Bolshie_long:0 "인도차이나 볼셰비키당"
-INC_DDQDD:0 "DDQDD"
+INC_DDQDD:0 "인도차이나 국민당"
 INC_DDQDDie_long:0 "인도차이나 국민당(Dong Duong Quoc dan Dang)"
-INC_DVQDD:0 "DVQDD"
+INC_DVQDD:0 "다이 비엣 국민당"
 INC_DVQDD_long:0 "다이 비엣 국민당(Dai Viet Cach mang Dang)"
 INC_Montagnards:0 "산악파"
 INC_Montagnards_long:0 "산악파"
