--- a/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
@@ -69,13 +69,13 @@ SIC_farm_upgrades_desc:0 "No more can the ploughshare and wheelbarrow truly be d
 ### Country Flags ###
 SIC_locked_and_loaded:0 "Ready to Strike"
 SIC_elections:0 "Parliamentary Elections of 1937 have happened"
-SIC_elections_SD:0 "PCD won the elections"
-SIC_elections_SL:0 "PPD won the elections"
-SIC_elections_SC:0 "DC won the elections"
-SIC_elections_NP:0 "IDS won the elections"
-SIC_owns_italy:0 "Liberated the North"
-SIC_confed:0 "Old Order Restored"
-SIC_empire:0 "Avanti Italia!"
+SIC_elections_SD:0 "기독민주당의 선거 승리"
+SIC_elections_SL:0 "대중민주당의 선거 승리"
+SIC_elections_SC:0 "기독교 민주주의의 선거 승리"
+SIC_elections_NP:0 "시칠리아 통합주의의 선거 승리"
+SIC_owns_italy:0 "해방된 북부"
+SIC_confed:0 "구 질서의 복원"
+SIC_empire:0 "이탈리아여 전진하라!"
 SIC_the_organic_kingdom_established:0 "The Integralists have taken control"
 SIC_democracy_prevails:0 "Democracy prevails in the Kingdom"
 SIC_italian_empire_founded:0 "The Italian Empire has been founded"
@@ -181,11 +181,11 @@ SIC_never_surrender:0 "Never Surrender!"
 SIC_never_surrender_desc:0 "We shall go on to the end. We shall fight in this island of Sicily, we shall fight on the seas and oceans, we shall fight with growing confidence and growing strength in the air, we shall defend our island, whatever the cost may be. We shall fight on the beaches, we shall fight on the landing grounds, we shall fight in the fields and in the streets, we shall fight in the hills; we shall never surrender"
 SIC_tanks_a_lot:0 "ANFA Expansion Effort"
 SIC_tanks_a_lot_desc:0 "Economical incentives and legal protections must be put into place to ensure our tank manufacturing doesn't stay behind that of our foul foes"
-SIC_modern_army:0 "The Army of Sicily"
+SIC_modern_army:0 "시칠리아 육군"
 SIC_modern_army_desc:0 "The army of our Kingdom should be a fighting force like no other, modern, well equipped and brave. The pride of the nation will save its soul!"
 
 ### Industry Focuses ###
-SIC_development:0 "The Future of Mezzogiorno"
+SIC_development:0 "메초조르노의 미래"
 SIC_development_desc:0 "Our status of being the wealthiest of the Italian nations is not due to our actual wealth, but due to how the other parts of the peninsula's assets are either war-torn or owned by foreign investors. We are effectively the last hope of Italian industry."
 SIC_agrarian_issue:0 "The Agrarian Question"
 SIC_agrarian_issue_desc:0 "Ever since the invasion of the Lombards, our lands have been dominated by large-scale landholders. The situation only got worse through the last decades and centuries, and very few men hold almost all the land, creating significant tension in rural areas of our Kingdom"
@@ -263,7 +263,7 @@ SIC_barbones_air_tree2_desc:0 "To truly win the war that approaches, we must ens
 SIC_barbones_air_tree3_desc:0 "Our industries must be able to produce the best aeroplanes they can, even if this means we must cut a few corners here and there"
 
 ### Foreign Policy Focuses ###
-SIC_old_order:0 "The Old Order"
+SIC_old_order:0 "구 질서"
 SIC_old_order_desc:0 "The Italian Federation, endures, and reborn into the new Confederation, where each state works with the other to bring prosperity and peace!"
 SIC_preserve_status_quo:0 "Preserve the Status Quo"
 SIC_preserve_status_quo_desc:0 "The Confederation respects regional differences, local customs and cultures and is far more representative than the Savoyard kingdom ever was. However, we must keep vigilant to remind would be traitors that we are still all Italians, and that our motherland must be defended"
@@ -271,23 +271,23 @@ SIC_customs_union:0 "Confederate Customs Union"
 SIC_customs_union_desc:0 "We must freely allow merchandise, goods, companies and people to move through the territories of the Confederation, to ease rebuilding and ensure that the smaller states don't lack vital resources"
 SIC_frattelli_ditalia:0 "Fratelli d'Italia"
 SIC_frattelli_ditalia_desc:0 "We have united Italy again, now under our leadership! We finally will make an Italy for all Italians!"
-SIC_imppero_italiano:0 "First Italian Empire"
+SIC_imppero_italiano:0 "이탈리아 제1제국"
 SIC_imppero_italiano_desc:0 "In order to ensure our security and continuing stability, the Italian Federation will be reorganised into the first Italian Empire, to ensure a safer and more secure society. The states of the Federation will now be subjects of the Emperor, who just so happens to be the King of Sicily, as decided by a meeting of Federation notables"
 SIC_ittalia_irredenta:0 "Italia Irredenta!"
 SIC_ittalia_irredenta_desc:0 "The destiny of Italy is to reclaim its lost lands; no matter the cost!"
 SIC_foreign:0 "Defensive Alliance?"
 SIC_foreign_desc:0 "The Syndicalists are part of their own Alliance, protected by the Union of Britain and France. We must find our own allies as a counterweight and free Italy once and for all"
-SIC_entente:0 "Join the Entente"
-SIC_aus:0 "League with Austria"
+SIC_entente:0 "협상국 가입"
+SIC_aus:0 "오스트리아와의 동맹"
 SIC_mittel_desc:0 "Germany is the only Great Power of Europe, only they can effectively be a counterweight to the Syndicalist menace."
 SIC_entente_desc:0 "Our friends in France will help us liberate the North, just as we will aid them in reclaiming their birthright. We should work together to reclaim their lands and control the Mediterranean sea"
 SIC_aus_desc:0 "The Habsburg Monarchy has aided us in the past, and will be wise enough to see the value of aiding the true Italian government when the time is right"
 SIC_mittel:0 "Side with the Hegemon"
-SIC_matter_of_fate:0 "The Fate of Italy"
+SIC_matter_of_fate:0 "이탈리아의 운명"
 SIC_matter_of_fate_desc:0 "With our great victory, a path must be taken by us on how to administer the North. To the victor, the spoils!"
 
 ### Constitutional Kingdom Focuses ###
-SIC_constitutional_kingdom:0 "The Constitutional Kingdom"
+SIC_constitutional_kingdom:0 "입헌 왕국"
 SIC_constitutional_kingdom_desc:0 "Our young constitution has been under siege from radical elements since its creation. We will never let the light of democracy be put out from our brave Sicily"
 SIC_civil_liberties:0 "Protect Civil Liberties"
 SIC_civil_liberties_desc:0 "Many rights are often under risk in these times of almost imminent warfare; from the basic to the superfluous. None will be allowed to be at risk"
@@ -313,7 +313,7 @@ SIC_stable_democracy:0 "Stable Democracy"
 SIC_stable_democracy_desc:0 "As our government leaves and another takes its place, the democratic principles will always be respected, and the will of the people will endure"
 
 ### Organic Kingdom Focuses ###
-SIC_organic_kingdom:0 "The Organic Kingdom"
+SIC_organic_kingdom:0 "유기적 왕국"
 SIC_organic_kingdom_desc:0 "The Two Sicilies are one, and yet many. Each castle, each village and each house, product of centuries of incredible history and brave accomplishments. Rather than copying bourgeoisie foreign concepts, we will make a government of our own, by the people, for the people, through our King"
 SIC_national_catholicism:0 "National Catholicism"
 SIC_national_catholicism_desc:0 "The people of Sicily are not bound by shallow ideas of Race or delusions of superiority, but by our unshaken faith and resolve to better ourselves and resist tyranny wherever that may lie!"
@@ -342,9 +342,9 @@ SIC_politics_desc:0 "Sicily will stand tall to the Red Tide. Every single person
 
 ### Events ###
 
-sic.1.t:0 "The Kingdom of the Two Sicilies in 1936"
-sic.1.d:0 "Following the Napoleonic wars, the Kingdom of the Two Sicilies was created, combining the two old kingdoms of Naples and Sicily, lasting until 1860 when Sardinia sought to unite Italy under her rule. The South, which was always generally agricultural, suffered at the hands of the Savoies who did not care much for actually industrialising the south and poverty became commonplace.\n\nWhen the Weltkrieg began in 1914 Italy chose the side of the Entente, much to her ruin. When the Austrians achieved victory against the Italians, they broke up the Kingdom into a number of smaller states, and out of the resulting bloody civil war the Kingdom of The Two Sicilies was reborn.\n\nSince the end of hostilities, the Kingdom has been focused internally, trying to resolve the serious issues left by the House of Savoy, and the politically successful Social Democrats have tried to carve out a new path for the Kingdom. The rise of the opposing 'Integralisti 'e Ddoje Sicilie' could signal a radical change in the Kingdom's politics.\n\nOnly time will tell if they get to achieve this or if democracy will prevail."
-sic.1.a:0 "Long live the King!"
+sic.1.t:0 "1936년의 양 시칠리아 왕국"
+sic.1.d:0 "나폴레옹 전쟁이 끝나고 두개의 옛 왕국 나폴리와 시칠리아가 합쳐지며 양 시칠리아 왕국이 탄생했고 샤르데냐가 이탈리아를 자신의 통치하에 통일시키도록 강요하는 1860년까지 존속했습니다. 언제나 일반적으로 농촌적이었던 남부는 실질적으로 남부를 개발시키려는 의지가 전혀 없던 사보이 왕가의 치하에서 고통받았고 가난이 도처에 만연하게 되었습니다.\n\n세계대전이 1914년 시작되며 이탈리아는 협상국을 택했고 더욱 몰락하게 되었습니다. 오스트리아인들은 이탈리아에 대해 승리를 거두자 이탈리아를 수많은 소국으로 쪼갰고 피비린내나는 내전의 잔해에서 양 시칠리아가 다시 태어났습니다.\n\n전투가 끝난 이후 왕국은 사보이 왕가가 남긴 심각한 문제를 해결하기 위해 내부적으로 집중했고 정치적으로 성공한 사민주의자들은 왕국을 위한 새로운 길을 조각하는데 노력해왔습니다. 이에 적대하는 '양시칠리아 통합주의자'의 부상은 왕국의 정치에 극단적인 변화의 신호가 될 것입니다.\n\n오직 시간만이 그들이 권력을 거머쥘지 민주주의가 승리할지 말해줄 것입니다."
+sic.1.a:0 "국왕 폐하 만세!"
 
 sic.2.t:0 "Black Monday hits the Kingdom"
 sic.2.d:0 "The economic crisis that began in Germany has spiralled out of control and spread to Italy. The Kingdom of the Two Sicilies' prosperity has been shattered by Black Monday and confidence in the government has been shaken."
