--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -47,7 +47,7 @@ ARG_NAVY:0 "§R이것은 해군을 강화시킬 것이다§! \n"
 ARG_ARMY:0 "§R이것은 육군을 강화시킬 것이다§! \n"
 GOU_Control:0 "GOU가 우리를 견제하다"
 GOU_Control_tt:0 "§R이것은 우리가 더 이상 이웃을 침략하는 것을 막을 것이다!§!\n" 
-DIPLO_OPEN_TT:0 "§M이제 세계 정치의 편을 선택할 수 있습니다§!"
+DIPLO_OPEN_TT:0 "§M이제  정치의 편을 선택할 수 있습니다§!"
 FOP.tt:0 "§R1937년 12월 이전에 위기를 해결하지 못하는 것은 엄청난 결과를 가져올 것입니다!§!\n"
 ACW_CSA_actually_rose_up:0 "잭 리드가 연방에서 탈퇴했다"
 ACW_AUS_actually_rose_up:0 "휴이 롱이 연방에서 탈퇴했다"
