--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -849,68 +849,68 @@ de_havilland_south_africa:0 "de Havilland South Africa"
 south_african_vickers:0 "Vickers-Armstrong South Africa"
 
 ### Spain Carlist ###
-car_altos_hornos:0 "Altos Hornos de Vizcaya"
-car_compania_telefonica_nacional:0 "Compañía Telefónica Nacional de España"
+car_altos_hornos:0 "알토즈 호르노즈 드 비즈카야"
+car_compania_telefonica_nacional:0 "스페인 국립 전화 회사"
 car_campsa:0 "CAMPSA"
-car_compania_espanola_petroleos:0 "Compañía Española de Petróleos"
-car_astra_unceta:0 "Astra Unceta y Cía"
-car_llama_gabilondo:0 "Llama-Gabilondo y Cia"
-car_star_bonifacio:0 "Star Bonifacio Echeverria"
-car_esperanza_cia:0 "Esperanza y Cia"
-car_fabrica_de_armas_trubia:0 "Fábrica de armas de Trubia"
-car_abadal_buick:0 "Abadal-Buick"
-car_irizar:0 "Irizar"
-car_compania_auxiliar_ferrocarriles:0 "Compañía Auxiliar de Ferrocarriles"
-car_hispano_suiza:0 "Hispano-Suiza"
-car_construcciones_aeronauticas_sa:0 "Construcciones Aeronáuticas S.A."
-car_aeronautica_industrial_sa:0 "Aeronáutica Industrial S.A."
-car_hispano_aviacion:0 "Hispano Aviación"
-car_talleres_loring:0 "Talleres Loring"
-car_sociedad_espanola_construccion:0 "Sociedad Española de Construcción Naval"
-car_euskalduna:0 "Euskalduna"
-CAR_Elixio_Rodriguez_cair_sli:0 "Elixio Rodriguez"
+car_compania_espanola_petroleos:0 "스페인 석유 회사"
+car_astra_unceta:0 "아스트라 언세타"
+car_llama_gabilondo:0 "라마-가빌론도"
+car_star_bonifacio:0 "스타 보니파시오 에체베리아"
+car_esperanza_cia:0 "에스페란사"
+car_fabrica_de_armas_trubia:0 "트루비아 무기 공장"
+car_abadal_buick:0 "아바달-뷰이크"
+car_irizar:0 "이리자르"
+car_compania_auxiliar_ferrocarriles:0 "철도 보조 회사"
+car_hispano_suiza:0 "히스파노-스위스"
+car_construcciones_aeronauticas_sa:0 "항공건설 S.A."
+car_aeronautica_industrial_sa:0 "항공산업 S.A."
+car_hispano_aviacion:0 "히스파노 항공"
+car_talleres_loring:0 "로링 작업장"
+car_sociedad_espanola_construccion:0 "스페인 해군 건설 협회"
+car_euskalduna:0 "에우스칼두나"
+CAR_Elixio_Rodriguez_cair_sli:0 "엘릭시오 로드리게즈"
 
 ### Spain FAI ###
-cnt_altos_hornos:0 "Altos Hornos de Vizcaya"
-cnt_compania_telefonica_nacional:0 "Compañía Telefónica Nacional de España"
+cnt_altos_hornos:0 "알토즈 호르노즈 드 비즈카야"
+cnt_compania_telefonica_nacional:0 "스페인 국립 전화 회사"
 cnt_campsa:0 "CAMPSA"
-cnt_compania_espanola_petroleos:0 "Compañía Española de Petróleos"
-cnt_astra_unceta:0 "Astra Unceta y Cía"
-cnt_llama_gabilondo:0 "Llama-Gabilondo y Cia"
-cnt_star_bonifacio:0 "Star Bonifacio Echeverria"
-cnt_esperanza_cia:0 "Esperanza y Cia"
-cnt_fabrica_de_armas_trubia:0 "Fábrica de armas de Trubia"
-cnt_abadal_buick:0 "Abadal-Buick"
-cnt_irizar:0 "Irizar"
-cnt_compania_auxiliar_ferrocarriles:0 "Compañía Auxiliar de Ferrocarriles"
-cnt_hispano_suiza:0 "Hispano-Suiza"
-cnt_construcciones_aeronauticas_sa:0 "Construcciones Aeronáuticas S.A."
-cnt_aeronautica_industrial_sa:0 "Aeronáutica Industrial S.A."
-cnt_hispano_aviacion:0 "Hispano Aviación"
-cnt_talleres_loring:0 "Talleres Loring"
-cnt_sociedad_espanola_construccion:0 "Sociedad Española de Construcción Naval"
-cnt_euskalduna:0 "Euskalduna"
+cnt_compania_espanola_petroleos:0 "스페인 석유 회사"
+cnt_astra_unceta:0 "아스트라 언세타"
+cnt_llama_gabilondo:0 "라마-가빌론도"
+cnt_star_bonifacio:0 "스타 보니파시오 에체베리아"
+cnt_esperanza_cia:0 "에스페란사"
+cnt_fabrica_de_armas_trubia:0 "트루비아 무기 공장"
+cnt_abadal_buick:0 "아바달-뷰이크"
+cnt_irizar:0 "이리자르"
+cnt_compania_auxiliar_ferrocarriles:0 "철도 보조 회사"
+cnt_hispano_suiza:0 "히스파노-스위스"
+cnt_construcciones_aeronauticas_sa:0 "항공건설 S.A."
+cnt_aeronautica_industrial_sa:0 "항공산업 S.A."
+cnt_hispano_aviacion:0 "히스파노 항공"
+cnt_talleres_loring:0 "로링 작업장"
+cnt_sociedad_espanola_construccion:0 "스페인 해군 건설 협회"
+cnt_euskalduna:0 "에우스칼두나"
 
 ### Spain ###
-spr_altos_hornos:0 "Altos Hornos de Vizcaya"
-spr_compania_telefonica_nacional:0 "Compañía Telefónica Nacional de España"
+spr_altos_hornos:0 "알토즈 호르노즈 드 비즈카야"
+spr_compania_telefonica_nacional:0 "스페인 국립 전화 회사"
 spr_campsa:0 "CAMPSA"
-spr_compania_espanola_petroleos:0 "Compañía Española de Petróleos"
-spr_astra_unceta:0 "Astra Unceta y Cía"
-spr_llama_gabilondo:0 "Llama-Gabilondo y Cia"
-spr_star_bonifacio:0 "Star Bonifacio Echeverria"
-spr_esperanza_cia:0 "Esperanza y Cia"
-spr_fabrica_de_armas_trubia:0 "Fábrica de armas de Trubia"
-spr_abadal_buick:0 "Abadal-Buick"
-spr_irizar:0 "Irizar"
-spr_compania_auxiliar_ferrocarriles:0 "Compañía Auxiliar de Ferrocarriles"
-spr_hispano_suiza:0 "Hispano-Suiza"
-spr_construcciones_aeronauticas_sa:0 "Construcciones Aeronáuticas S.A."
-spr_aeronautica_industrial_sa:0 "Aeronáutica Industrial S.A."
-spr_hispano_aviacion:0 "Hispano Aviación"
-spr_talleres_loring:0 "Talleres Loring"
-spr_sociedad_espanola_construccion:0 "Sociedad Española de Construcción Naval"
-spr_euskalduna:0 "Euskalduna"
+spr_compania_espanola_petroleos:0 "스페인 석유 회사"
+spr_astra_unceta:0 "아스트라 언세타"
+spr_llama_gabilondo:0 "라마-가빌론도"
+spr_star_bonifacio:0 "스타 보니파시오 에체베리아"
+spr_esperanza_cia:0 "에스페란사"
+spr_fabrica_de_armas_trubia:0 "트루비아 무기 공장"
+spr_abadal_buick:0 "아바달-뷰이크"
+spr_irizar:0 "이리자르"
+spr_compania_auxiliar_ferrocarriles:0 "철도 보조 회사"
+spr_hispano_suiza:0 "히스파노-스위스"
+spr_construcciones_aeronauticas_sa:0 "항공건설 S.A."
+spr_aeronautica_industrial_sa:0 "항공산업 S.A."
+spr_hispano_aviacion:0 "히스파노 항공"
+spr_talleres_loring:0 "로링 작업장"
+spr_sociedad_espanola_construccion:0 "스페인 해군 건설 협회"
+spr_euskalduna:0 "에우스칼두나"
 
 ### Sweden ###
 lkab:0 "LKAB"
