--- a/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -193,11 +193,11 @@ CAL_californian_nationalism:0 "Pacific Nationalism"
 CAL_canadian_businesses:0 "Pacific-Canadian Trade"
 
 ### Parties ###
-CAL_totalist_party:0 "CPS"
+CAL_totalist_party:0 "태평양 생디칼리스트 연맹"
 CAL_totalist_party_long:0 "태평양 생디칼리스트 연맹"
-CAL_radical_socialist_party:0 "CPS"
+CAL_radical_socialist_party:0 "태평양 생디칼리스트 연맹"
 CAL_radical_socialist_party_long:0 "태평양 생디칼리스트 연맹"
-CAL_syndicalist_party:0 "CPS"
+CAL_syndicalist_party:0 "태평양 생디칼리스트 연맹"
 CAL_syndicalist_party_long:0 "태평양 생디칼리스트 연맹"
 CAL_social_democrat_party:0 "사회민주당"
 CAL_social_democrat_party_long:0 "태평양 사회민주당"
@@ -209,9 +209,9 @@ CAL_social_conservative_party:0 "얼사인당"
 CAL_social_conservative_party_long:0 "태평양 얼사인당"
 CAL_authoritarian_democrat_party:0 "군부"
 CAL_authoritarian_democrat_party_long:0 "군부"
-CAL_paternal_autocrat_party:0 "PFP"
+CAL_paternal_autocrat_party:0 "태평양 제일당"
 CAL_paternal_autocrat_party_long:0 "태평양 제일당"
-CAL_national_populist_party:0 "PFP"
+CAL_national_populist_party:0 "태평양 제일당"
 CAL_national_populist_party_long:0 "태평양 제일당"
 
 ### Opinion Modifiers ###
