--- a/Kaiserreich Korean Translation/localisation/KR_Confederation_Great_Lakes_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Confederation_Great_Lakes_l_english.yml
@@ -19,5 +19,5 @@ CGL_authoritarian_democrat_party:0 "군사평의회"
 CGL_authoritarian_democrat_party_long:0 "군사평의회"
 CGL_paternal_autocrat_party:0 "군사평의회"
 CGL_paternal_autocrat_party_long:0 "군사평의회"
-CGL_national_populist_party:0 "아메리카 우선당"
-CGL_national_populist_party_long:0 "아메리카 우선당"
+CGL_national_populist_party:0 "미국 제일당"
+CGL_national_populist_party_long:0 "미국 제일당"
